tests/purs/failing/DiffKindsSameName/LibB.purs
module DiffKindsSameName.LibB where

data DemoKind

foreign import data DemoData :: DemoKind

